<resources>
    <string name="app_name">Android 641p Shalikov</string>
    <string name="equation_pattern">a=1,b=-4,c=0</string>
    <string name="action">solve</string>
    <string name="no_ans">no solution</string>
    <string name="one_ans">answer: %1$d</string>
    <string name="two_ans">answer: %1$d; %2$d</string>
    <string name="parse_error_message">failed to parse equation</string>
    <string name="task1">solve equation</string>
    <string name="task2">sort array</string>
    <string name="task2_pattern">n=5(4,3,2,16,0)</string>
    <string name="task2_action">sort</string>
    <string name="header">rotation times:</string>
    <string name="log_tag_lifecycle">com.albarn.lifecycle</string>
    <string name="log_tag_calculation">com.albarn.calculation</string>
    <string name="task3">run async task</string>
    <string name="task4">WEB VIEW</string>
    <string name="task5">sort with adapter</string>
    <string name="weather_update">refresh</string>
    <integer-array name="strange_numbers">
        <item>0</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>9</item>
        <item>12</item>
    </integer-array>
</resources>
