<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.albarn.MainActivity" android:orientation="vertical">

    <TextView
            android:text="@string/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/headerMain" android:layout_weight="1"/>
    <Button
            android:text="@string/task1"
            android:onClick="solveEquation"
            android:layout_height="wrap_content" android:id="@+id/parserButton" android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="match_parent"/>
    <Button
            android:text="@string/task2"
            android:onClick="sortArray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/sortButton" android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/task3"
            android:onClick="runAsyncTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/asyncButton" android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/task4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/webButton" android:layout_weight="1"
            android:onClick="webView" style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/task5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/adapterButton" android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless" android:onClick="sortWithAdapter"/>
</LinearLayout>
