<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.albarn.sort.SortActivity" android:orientation="vertical">

    <TextView
            android:text="@string/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/headerSort"/>
    <TextView
            android:text="@string/task2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>
    <EditText
            android:hint="@string/task2_pattern"
            android:labelFor="@id/arrayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/task2_pattern"
            android:ems="10"
            android:id="@+id/arrayEditText"/>
    <Button
            android:onClick="sort"
            android:text="@string/task2_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/task2AnsLabel"/>
    <ListView android:layout_width="match_parent" android:layout_height="match_parent"
              android:id="@+id/numbersListView"/>
</LinearLayout>
